# mahjong-server

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
mahjong-server/: main.py
